--- a/wwwroot/input.css
+++ b/wwwroot/input.css
@@ -3,3 +3,10 @@
 
 @source "../bin/lumexui/*.cs"; /* styles */
 @source "../**/*.razor";
+
+.no-select,
+.no-select * {
+    user-select: none;
+    -webkit-user-select: none;
+    -webkit-touch-callout: none;
+}
